--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-google-maps": "^9.0.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "react-tap-event-plugin": "^3.0.2",
