--- a/front/package.json
+++ b/front/package.json
@@ -18,5 +18,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://niisku.lamk.fi:4302"
 }
