--- a/front/package.json
+++ b/front/package.json
@@ -14,10 +14,10 @@
     "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "PORT=4333 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://niisku.lamk.fi:4302"
+  "proxy": "http://niisku.lamk.fi:4333"
 }
