--- a/front/package.json
+++ b/front/package.json
@@ -8,13 +8,14 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.0.1",
+    "react-native-geocoding": "^0.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "PORT=4333 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
