--- a/back/express/package.json
+++ b/back/express/package.json
@@ -10,10 +10,10 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.2",
-    "express": "^4.13.0",
+    "express": "^4.16.2",
     "express-session": "^1.11.3",
     "morgan": "^1.6.0",
-    "mysql": "^2.7.0",
+    "mysql2": "^1.5.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
   }
