--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "react-tap-event-plugin": "^3.0.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "universal-cookie": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
