--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
+    "react-cookie": "^2.1.4",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.0.1",
     "react-redux": "^5.0.6",
