--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Digiloop",
+  "name": "Digiloop",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon2.ico",
       "sizes": "192x192",
       "type": "image/png"
     }
