--- a/front/package.json
+++ b/front/package.json
@@ -22,5 +22,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://niisku.lamk.fi:4333"
+  "proxy": "http://niisku.lamk.fi:4333",
+  "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.1.2"
+  }
 }
