--- a/back/express/package.json
+++ b/back/express/package.json
@@ -7,16 +7,18 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.1",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.4",
     "ejs": "^2.3.2",
     "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
     "express-session": "^1.11.3",
     "morgan": "^1.6.0",
     "mysql2": "^1.5.2",
     "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0"
-  }
+  },
+  "devDependencies": {}
 }
