--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
+    "@nuxtjs/axios": "^5.3.1",
     "axios": "^0.16.2",
     "material-ui": "^0.19.4",
     "react": "^16.0.0",
