--- a/back/express/package.json
+++ b/back/express/package.json
@@ -18,7 +18,8 @@
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.4.0"
+    "passport-oauth2": "^1.4.0",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {}
 }
