--- a/back/express/package.json
+++ b/back/express/package.json
@@ -19,7 +19,8 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
-    "serve-index": "^1.9.1"
+    "serve-index": "^1.9.1",
+    "session-memory-store": "^0.2.2"
   },
   "devDependencies": {}
 }
