--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "react-cookie": "^2.1.4",
     "react-dom": "^16.0.0",
     "react-google-maps": "^9.0.1",
+    "react-images-upload": "^1.1.99",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.4",
     "react-tap-event-plugin": "^3.0.2",
