--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,8 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.4",
     "react-tap-event-plugin": "^3.0.2",
+    "react-window-resize-listener": "^1.1.0",
+    "react-window-size-listener": "^1.2.1",
     "redux": "^3.7.2",
     "universal-cookie": "^2.1.2"
   },
