--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@nuxtjs/axios": "^5.3.1",
     "axios": "^0.16.2",
     "material-ui": "^0.19.4",
+    "moment": "^2.22.2",
     "react": "^16.0.0",
     "react-cookie": "^2.1.4",
     "react-dom": "^16.0.0",
