--- a/back/express/package.json
+++ b/back/express/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.11.3",
     "morgan": "^1.6.0",
     "mysql2": "^1.5.2",
+    "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
