--- a/back/express/package.json
+++ b/back/express/package.json
@@ -12,7 +12,9 @@
     "ejs": "^2.3.2",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
+    "express-redis-cache": "^1.1.3",
     "express-session": "^1.11.3",
+    "image-cache": "^1.0.1",
     "morgan": "^1.6.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.6.7",
@@ -20,6 +22,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
+    "password-generator": "^2.2.0",
     "serve-index": "^1.9.1",
     "session-memory-store": "^0.2.2"
   },
