--- a/back/express/package.json
+++ b/back/express/package.json
@@ -5,7 +5,7 @@
     "start": "node ./server"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.4",
