--- a/back/express/package.json
+++ b/back/express/package.json
@@ -5,8 +5,11 @@
     "start": "node ./server"
   },
   "dependencies": {
+    "apicache": "^1.2.3",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "connect-redis": "^3.3.3",
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
