--- a/back/express/package.json
+++ b/back/express/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-session": "^1.11.3",
+    "http-proxy": "^1.17.0",
     "image-cache": "^1.0.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
@@ -24,8 +25,7 @@
     "passport-local": "^1.0.0",
     "password-generator": "^2.2.0",
     "redis": "^2.8.0",
-    "serve-index": "^1.9.1",
-    "session-memory-store": "^0.2.2"
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {}
 }
