--- a/back/express/package.json
+++ b/back/express/package.json
@@ -25,7 +25,8 @@
     "passport-local": "^1.0.0",
     "password-generator": "^2.2.0",
     "redis": "^2.8.0",
-    "serve-index": "^1.9.1"
+    "serve-index": "^1.9.1",
+    "session-memory-store": "^0.2.2"
   },
   "devDependencies": {}
 }
