--- a/back/express/package.json
+++ b/back/express/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "apicache": "^1.2.3",
+    "async-redis": "^1.1.4",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
