--- a/back/express/package.json
+++ b/back/express/package.json
@@ -13,6 +13,7 @@
     "connect-redis": "^3.3.3",
     "cookie-parser": "^1.3.5",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-session": "^1.11.3",
